# ShadowTrader

./: .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  alembic.ini  pyproject.toml  test_alpaca_live.py  test_full_loop.py
backend/alembic/: env.py
backend/alembic/versions/: 20260319_000001_initial.py  20260321_000002_phase3_baselines_chat_patterns.py  20260322_000003_subscriptions.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/app/auth/: dependencies.py  supabase_client.py
backend/app/billing/: __init__.py  middleware.py  stripe_service.py  webhooks.py
backend/app/brokers/: __init__.py  alpaca.py  base.py  binance_adapter.py  ibkr.py
backend/app/models/: __init__.py  baseline.py  broker_connection.py  chat_message.py  pattern_alert.py  rule.py  session.py  subscription.py  trade.py  user.py  violation.py
backend/app/routers/: alerts.py  auth.py  broker.py  chat.py  deps.py  rules.py  sessions.py  trades.py
backend/app/schemas/: alert.py  billing.py  broker.py  chat.py  common.py  pattern.py  rule.py  session.py  trade.py
backend/app/services/: ai_coach.py  pattern_detector.py  rule_engine.py  rule_templates.py  scoring.py  session_tracker.py  trader_analytics.py
backend/app/tasks/: __init__.py  baseline_compute.py  daily_summary.py
backend/scripts/: seed_test_data.py
backend/tests/: conftest.py  test_alpaca_adapter.py  test_pattern_detector.py  test_rule_engine.py  test_session_tracker.py
(+69 files in other folders)
